--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,27 @@ main {
 button {
   background-color: transparent;
   color: rgba(255, 255, 255, 0.8);
-  width: 100px;
   display: inline-block;
-  border: 0;
+  border: 0;  
+  width: 100px;
+  cursor: pointer;
+}
 
+button.with-text {
+  width: auto;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  line-height: 36px;
+}
+
+button.with-text svg {
+  width: 36px;
+  float: left;
+  margin-right: 5px;
+}
+
+label {
+  display: block;
 }
